<resources>
    <string name="app_name">GoogleImageSearch</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search_label">Search</string>
    <string name="image_title_label">Image Title</string>
    <string name="image_description">Image Result</string>
    <string name="title_activity_image_display">ImageDisplayActivity</string>
    <string name="title_activity_search">Image Search</string>


    <string-array name="image_sizes_array">
        <item>Any</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>

    <string-array name="image_colors_array">
        <item>Any</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Gray</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item>Red</item>
        <item>Teal</item>
        <item>White</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="image_types_array">
        <item>Any</item>
        <item>Face</item>
        <item>Photo</item>
        <item>Clipart</item>
        <item>Lineart</item>
    </string-array>

    <string-array name="image_rights_array">
        <item>All</item>
        <item>Public Domain</item>
        <item>Attributable</item>
        <item>Noncommerical</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_button_label">Save</string>
    <string name="image_size_label">Image Size</string>
    <string name="image_color_label">Image Color</string>
    <string name="image_type_label">Image Type</string>
    <string name="image_rights_label">Image Attribution</string>
    <string name="image_site_label">Site Filter</string>
    <string name="cancel_button_label">Cancel</string>
    <string name="image_description_text">Image Description</string>

    <string name="network_failure_warning">You must connect to the network to use this application.</string>
    <string name="casual_dialog_accept">Ok</string>


</resources>
